
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* description; int id; } ;


 int fprintf (int ,char*,...) ;
 int stdout ;
 TYPE_1__* targets ;

void list( void )
{
int loop = 0;

 fprintf( stdout , "\n\nAvailable targets\n" );
 while( targets[loop].description != ((void*)0) )
 {
 fprintf( stdout , "\t%d\t%s\n" , targets[loop].id , targets[loop].description );
 loop++;
 }
 fprintf( stdout , "\n\n" );

 return;
}
